src/tests/snapshots/cargo_vet__tests__vet__builtin-cycle-unaudited.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "dev-cycle",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-run"
      ]
    },
    {
      "name": "normal",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "dev-cycle",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        },
        "confident": true
      },
      {
        "name": "normal",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        },
        "confident": true
      }
    ],
    "suggest_by_criteria": {
      "safe-to-deploy": [
        {
          "name": "normal",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          },
          "confident": true
        }
      ],
      "safe-to-run": [
        {
          "name": "dev-cycle",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          },
          "confident": true
        }
      ]
    },
    "total_lines": 200
  }
}
