src/tests/snapshots/cargo_vet__tests__vet__builtin-simple-unaudited-nested-weaker-req-needs-dep-criteria.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "transitive-third-party1",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "transitive-third-party1",
        "notable_parents": "third-party1",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "raw": "+100",
            "count": 100
          }
        },
        "confident": true
      }
    ],
    "suggest_by_criteria": {
      "safe-to-deploy": [
        {
          "name": "transitive-third-party1",
          "notable_parents": "third-party1",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "raw": "+100",
              "count": 100
            }
          },
          "confident": true
        }
      ]
    },
    "total_lines": 100
  }
}
