src/tests/snapshots/cargo_vet__tests__vet__mock-complex-core10-partially-too-weak-via-strong-delta.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "third-core",
      "version": "10.0.0",
      "missing_criteria": [
        "reviewed"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "third-core",
        "notable_parents": "firstB, thirdA, thirdAB",
        "suggested_criteria": [
          "reviewed"
        ],
        "suggested_diff": {
          "from": null,
          "to": "5.0.0",
          "diffstat": {
            "raw": "+25",
            "count": 25
          }
        },
        "confident": true
      }
    ],
    "suggest_by_criteria": {
      "reviewed": [
        {
          "name": "third-core",
          "notable_parents": "firstB, thirdA, thirdAB",
          "suggested_criteria": [
            "reviewed"
          ],
          "suggested_diff": {
            "from": null,
            "to": "5.0.0",
            "diffstat": {
              "raw": "+25",
              "count": 25
            }
          },
          "confident": true
        }
      ]
    },
    "total_lines": 25
  }
}
