src/tests/snapshots/cargo_vet__tests__vet__mock-simple-higher-version-review.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "third-party1",
      "version": "10.0.0",
      "missing_criteria": [
        "reviewed"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "third-party1",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "reviewed"
        ],
        "suggested_diff": {
          "from": "11.0.0",
          "to": "10.0.0",
          "diffstat": {
            "raw": "-21",
            "count": 21
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "reviewed": [
        {
          "name": "third-party1",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "reviewed"
          ],
          "suggested_diff": {
            "from": "11.0.0",
            "to": "10.0.0",
            "diffstat": {
              "raw": "-21",
              "count": 21
            }
          }
        }
      ]
    },
    "total_lines": 21
  }
}
